--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -2,6 +2,8 @@
 @import 'sass/footer';
 @import 'sass/products';
 @import 'sass/navigation';
+@import 'sass/slideshow';
+@import 'sass/contacts';
 
 @font-face {
   font-family: "Shamber";
@@ -13,20 +15,4 @@
     text-align: center;
     font-size: 26px;
     letter-spacing: .8px;
-}
-
-  // product slider
-  .slider {
-    width: 75%;
-    margin-left: auto;
-    margin-right: auto;
-    img {
-        width: 90%;
-        height: 300px;
-        object-fit: cover;
-    }
-}
-
-.slick-prev:before, .slick-next:before {
-  color: rgb(0, 0, 0);
 }
