--- a/client/src/sass/_navigation.scss
+++ b/client/src/sass/_navigation.scss
@@ -20,13 +20,28 @@
 }
 
 .nav-item{
+    @media(min-width: 800px){
+        margin-top: -30px;
+    }
     .active{
-        @media (min-width:1000px){
+        @media (min-width:900px){
             color: black;
             border-bottom: 1px solid #000;
         }
     }
-    @media(min-width: 800px){
-        margin-top: -30px;
+}
+
+.navbar-light {
+    .navbar-toggler-icon {
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(0, 0, 0)' stroke-width='1.5' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+        border: 1px solid white;
+    }
+    .navbar-toggler {
+        border: 1px solid white;
+        font-size: 1.4rem;
+        &:focus{
+            outline: 1px solid white;
+        }
     }
 }
+
